canonical corpus